# helloproto

./: BUILD  MODULE.bazel  README.md  bazel-bin  bazel-helloproto  bazel-out  bazel-testlogs  go.mod
cmd/client/: BUILD.bazel  client.go
proto/: BUILD.bazel  hello.proto
