load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/skalle/helloproto/cmd/client",
    visibility = ["//visibility:private"],
    deps = ["//proto:hellopb"],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
